trace/1-0-rotone.trace.txt
= Host information =============================================================
$> hostname; uname -msr
e3r4p9.42.fr
Darwin 14.5.0 x86_64

$> date
Fri Aug 21 17:24:40 CEST 2015

$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 6.1.0 (clang-602.0.53) (based on LLVM 3.6.0svn)
Target: x86_64-apple-darwin14.5.0
Thread model: posix

$> clang --version
Apple LLVM version 6.1.0 (clang-602.0.53) (based on LLVM 3.6.0svn)
Target: x86_64-apple-darwin14.5.0
Thread model: posix

= rotone =======================================================================
$> clang -Wextra -Wall -Werror rotone.c -o user_exe 
rotone.c:32:7: error: unused variable 'c' [-Werror,-Wunused-variable]
        char c;
             ^
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
